--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
-*.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
-/build
-/captures
-.externalNativeBuild
+# Build
+build/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# AndroidStudio files
 .idea
 *.iml
+
+# Gradle files
+.gradle
+
