ObjectAnimator动画练习,失败的喷火

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         </activity>
         <activity android:name=".MyViewAcitivity">
         </activity>
-        <activity android:name=".TouchActivity">
+        <activity android:name=".ObjectAnimatorActivity">
         </activity>
     </application>
 
